# encrypted-mcp-detection-RBAC

./: .env.example  .gitignore  RBAC_README.md  README.md  dataset.csv  dataset_hard.csv  dataset_hard_unbalanced.csv  docker-compose.test.yml  docker-compose.yml  generate_dataset.sh  generate_test_dataset.sh  live_monitor.py  live_rbac_monitor.py  rust_simulator.py  start_chaos.sh  start_demo.ps1  start_demo.sh  start_main_demo.ps1
classifier/: analyze_reports.py  api.py  check_model_types.py  requirements.txt  test_early_classifier.py  test_hard.py  train.py
classifier/models/: xgb_full.json  (+6 more)
dataset/: label_flows.py  requirements.txt
groq-client/: Dockerfile  chaos_mcp_client.py  groq_mcp_client.py  requirements.txt  restricted_mcp_client.py
logs/: encrypted_rbac_audit.jsonl  payload_inspection.jsonl  rbac_audit.jsonl
mcp-client/: Dockerfile  client.py  requirements.txt
mcp-server/: package.json  server.js
mcp-servers/: Dockerfile  start.sh
models/: xgb_full.json  xgb_n10.json  xgb_n15.json  xgb_n20.json  xgb_n3.json  xgb_n5.json  xgb_n8.json
nginx/: nginx.conf
noise-client/: Dockerfile  client.py  hard_client.py  requirements.txt
noise-server/: Dockerfile  package.json  server.js
proxy/: Dockerfile  audit_report.py  manual_test.py  standalone_demo.py  test_policy.py  tls_proxy.py  tool_policy.yaml
rust-extractor/: Cargo.toml
rust-extractor/benches/: feature_extraction.rs
rust-extractor/inference/: inference_server.py  requirements.txt
rust-extractor/src/: capture.rs  features.rs  flow.rs  inference.rs  lib.rs  main.rs  reaper.rs  tui.rs
(+26 files in other folders)
